# langchain

./: .gitignore  README.md  cricket.txt
1.BasicLLM/: 1.geminillm.py  2.groqllama.py  README.md  pyproject.toml  requirements.txt
2.Prompts/: 1.static_prompt.py  2.dynamic_prompt.py  3.chat_prompt_template.py  4.project.py
3.StructuredResponses/: 1.typeddict.py  2.annotated_typedict.py  3.pydantic_response.py  4.json_schema.py
4.OutputParsers/: 1.str_output_parser.py  2.json_output_parser.py  3.pydanti_output.py
5.Chains/: 1.simple_chain.py  3.conditional_chain.py  4.parallel_chain.py
6.DocumentLoaders/: 1.text_loader.py  2.pdf_loader.py  3.directory_loader.py  4.web_based_loader.py  5.csv_loader.py
7.TextSplitters/: 1.character_text_split.py  2.recursive_character_split.py  3.python_text_split.py
8.Embeddings/: 1.huggingface_embedding.py
Chains/: 2.sequential_chain.py
